# Doc2ArchAgent

./: .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-COMMERCIAL.md  NOTICE  README.md  pyproject.toml
.github/: copilot-instructions.md  shell-config.yaml
.github/ISSUE_TEMPLATE/: agent-pipeline.yml
.github/agents/: architect.agent.md  deployer.agent.md  diagram-d2.agent.md  diagram-diff.agent.md  diagram-drawio.agent.md  diagram-generator.agent.md  diagram-mermaid.agent.md  diagram-plantuml.agent.md  diagram-structurizr.agent.md  doc-collector.agent.md  doc-extractor.agent.md  doc-ingester.agent.md  doc-writer.agent.md  (+4 more)
context/: compliance-mappings.yaml  compliance-rule-mapping.yaml  cwe-mappings.yaml  risk-scoring.yaml  stride-to-attack.yaml  threat-applicability.yaml  threat-rules.yaml
deployments/: _catalog.yaml
docs/: Doc2ArchAgent-Presentation.pptx  analysis-system-security-yaml-split.md  generate-presentation.py  roadmap-copilotkit-web-ui.md
examples/: networks-security.yaml  networks.yaml
instincts/: error-surfacing.md  handoff-protocol.md  progress-reporting.md  provenance-awareness.md  scope-enforcement.md  session-memory.md  user-confirmation.md  yaml-hygiene.md  zero-hallucination.md
schemas/: context.schema.json  dataflows.schema.json  deployment-security.schema.json  deployment.schema.json  diagram-index.schema.json  doc-inventory.schema.json  manifest.schema.json  networks-security.schema.json  networks.schema.json  pattern-meta.schema.json  provenance.schema.json  system-security.schema.json  system.schema.json
templates/: system.yaml.example
tests/: conftest.py  test_regression.py  test_validate.py
tools/: agent-bridge.py  agent_security_scan.py  agent_supervisor.py  classify-sections.py  compose.py  confidence.py  convert-docs.py  detect-tools.py  detect-tools.sh  dfa_constraints.py  entity_resolver.py  generate_index.py  ingest-kubernetes.py  ingest-openapi.py  ingest-structurizr.py  ingest-terraform.py  layout_analyzer.py  migrate-pattern.py  ocr_backends.py  parse-diagram-file.py  requirements.txt  section_classifier.py  sync-attack-data.py  threat-rules.py  validate-diagram.py  validate-patterns.py  validate-provenance.py  validate.py  verify-claims.py  vlm_providers.py
(+126 files in other folders)
